--- a/src/components/HeroSection.css
+++ b/src/components/HeroSection.css
@@ -54,7 +54,7 @@
 }
 
 .darkBg {
-  background-color: #1c2237;
+  background-color: #2d3c74;
 }
 
 .home__hero-subtitle {
@@ -69,7 +69,7 @@
 }
 
 .home__hero-img {
-  max-width: 95%;
+  max-width: 85%;
   margin-top: 0;
   margin-right: 0;
   margin-left: 10px;
