update manage printer page

--- a/src/components/SforMPrinter.css
+++ b/src/components/SforMPrinter.css
@@ -39,9 +39,17 @@
     letter-spacing: 1.4px;
     text-transform: uppercase;
     margin-bottom: 16px;
+    margin-top: 5px;
   }
   
   .heading {
+    margin-bottom: 24px;
+    font-size: 48px;
+    line-height: 1.1;
+    font-weight: 600;
+    color: #f7f8fa;
+  }
+  .title {
     margin-bottom: 24px;
     text-align: center;
     font-size: 48px;
@@ -50,6 +58,7 @@
     color: #f7f8fa;
   }
   
+
   .dark {
     color: #1c2237;
   }
